--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "mailjet-api-render",
+  "name": "blixt-mailjet-api",
   "version": "1.0.0",
-  "description": "API pour gérer l'envoi d'e-mails via Mailjet",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "node-mailjet": "^3.3.4"
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "node-mailjet": "^6.0.5"
   }
 }
